@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: IgnorantGuru <ignorantguru@gmx.com>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, build-essential, dbus,
  desktop-file-utils, libc6, libcairo2, libdbus-1-3, libglib2.0-0,
- libgtk2.0-0 (>= 2.24), libpango1.0-0, libstartup-notification0, libx11-6,
- shared-mime-info, intltool, pkg-config, libgtk2.0-dev (>= 2.24),
+ libgtk2.0-0 (>= 2.24), libgtk2.0-bin, libpango1.0-0, libstartup-notification0,
+ libx11-6, shared-mime-info, intltool, pkg-config, libgtk2.0-dev (>= 2.24),
  libglib2.0-dev, fakeroot, libstartup-notification0-dev, libdbus-1-dev,
  libgdk-pixbuf2.0-0, libgdk-pixbuf2.0-dev, hal, libhal-dev, libhal-storage-dev,
  libdbus-glib-1-dev, libhal-storage1, libhal1, libdbus-glib-1-2
@@ -15,8 +15,8 @@ Homepage: http://ignorantguru.github.com/spacefm/
 Package: spacefm-hal
 Architecture: any
 Depends: dbus, desktop-file-utils, bash, libc6, libcairo2, libdbus-1-3,
- libglib2.0-0, libgtk2.0-0 (>= 2.24), libgdk-pixbuf2.0-0, libpango1.0-0,
- libstartup-notification0, libx11-6, shared-mime-info,
+ libglib2.0-0, libgtk2.0-0 (>= 2.24), libgtk2.0-bin, libgdk-pixbuf2.0-0,
+ libpango1.0-0, libstartup-notification0, libx11-6, shared-mime-info,
  hal, libhal-storage1, libhal1, libdbus-glib-1-2
 Recommends: 
 Suggests: eject, lsof, wget, ktsuss, gksu
