@@ -5,7 +5,8 @@
     File|Root Window opens current folder #116
     specifying --panel=N without a dir shows and focuses panel N
     handle network URLs on command line
-    user manual Invocation updated 
+    user manual Invocation updated
+    added dependency libgtk2.0-bin [spacefm 0.7.10 with --disable-pixmaps]
 0.7.10  2012-07-25:
     added sort options #87 #37 #23
     completed russian translation ru.po
